k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-service
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
